--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,5 +1,5 @@
 .Tilt {
-  background: linear-gradient(89deg,#2F7A79 0%, #B4E2E2 100%);
+  background: linear-gradient(89deg,#B4E2E2 0%, #F2FAFA 100%);
 }
 
 #logo {
