--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
-  background: linear-gradient(89deg,#2F7A79 0%, #B4E2E2 100%);
+  background: linear-gradient(89deg,#B4E2E2 0%, #F2FAFA 100%);
 }
 
 button {
