--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,48 +1,34 @@
 .form {
-  width: 700px;
-  background: radial-gradient(
-        circle farthest-side at 0% 50%,
-        #fb1 23.5%,
-        rgba(240, 166, 17, 0) 0
-      )
-      21px 30px,
-    radial-gradient(
-        circle farthest-side at 0% 50%,
-        #b71 24%,
-        rgba(240, 166, 17, 0) 0
-      )
-      19px 30px,
-    linear-gradient(
-        #fb1 14%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 85%,
-        #fb1 0
-      )
-      0 0,
-    linear-gradient(
-        150deg,
-        #fb1 24%,
-        #b71 0,
-        #b71 26%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 74%,
-        #b71 0,
-        #b71 76%,
-        #fb1 0
-      )
-      0 0,
-    linear-gradient(
-        30deg,
-        #fb1 24%,
-        #b71 0,
-        #b71 26%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 74%,
-        #b71 0,
-        #b71 76%,
-        #fb1 0
-      )
-      0 0,
-    linear-gradient(90deg, #b71 2%, #fb1 0, #fb1 98%, #b71 0%) 0 0 #fb1;
-  background-size: 40px 60px;
+  width: 800px;
+  font-size: 1rem;
+}
+
+svg {
+  margin-bottom: 1rem;
+}
+
+
+.header-wrapper {
+  display: flex;
+  width: 90vw;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+
+}
+
+header {
+  flex: 50%;
+}
+h1, h2 {
+  text-align: center;
+}
+
+@media only screen and (min-width: 560px) {
+  h2, h3 {
+    text-align: left;
+    margin-left: 1rem;
+  }
 }
